--- a/ClientApp/app/components/scores/scores.component.html
+++ b/ClientApp/app/components/scores/scores.component.html
@@ -1,3 +1,28 @@
-<h1>Scores</h1>
+<div class="jumbotron">
+  <a href="www.create.pl" class="btn btn-lg btn-success">
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+      Dodaj mecz
+    </a>
+</div>
 
-<p>tra la la</p>
+<table class="table" *ngIf="matches && matches.length">
+  <thead>
+    <tr>
+      <th>Planeswalker 1</th>
+      <th>Wynik</th>
+      <th>Planeswalker 2</th>
+      <th></th>
+    </tr>
+  </thead>
+<tbody>
+  <tr *ngFor="let match of matches">
+    <td>{{match.player1.name}}</td>
+    <td>{{match.player1.score}} : {{match.player2.score}}</td>
+    <td>{{match.player2.name}}</td>
+    <td>
+      <button (click)="edit()" class="btn btn-default"><i class="fa fa-lg fa-pencil-square-o"></i></button>
+      <button (click)="delete()" class="btn btn-default"><i class="fa fa-lg fa-times"></i></button>
+    </td>
+  </tr>
+</tbody>
+</table>
