--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -28,8 +28,13 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/ranking']">
+                        <span class='glyphicon glyphicon-th-list'></span> Tabela
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/scores']">
-                        <span class='glyphicon glyphicon-th-list'></span> Scores
+                        <span class='glyphicon glyphicon-th-list'></span> Wyniki
                     </a>
                 </li>
             </ul>
