--- a/ClientApp/app/components/scores/add-match-dialog.component.html
+++ b/ClientApp/app/components/scores/add-match-dialog.component.html
@@ -1,1 +1,28 @@
-<h1>Add match</h1>
+<h1 md-dialog-title>Dodaj mecz</h1>
+
+<div md-dialog-content>
+  <div *ngIf = "data.availablePlayers && data.availablePlayers.length">
+    <select [(ngModel)]="data.selectedPlayer1" class="btn btn-default">
+      <option *ngFor="let player of data.availablePlayers" [ngValue]="player">{{player.name}}</option>
+    </select>
+  </div>
+
+  <div *ngIf = "data.availablePlayers && data.availablePlayers.length">
+    <select [(ngModel)]="data.selectedPlayer2" class="btn btn-default">
+      <option *ngFor="let player of data.availablePlayers" [ngValue]="player">{{player.name}}</option>
+    </select>
+  </div>
+
+
+  <md-form-field>
+    <input mdInput type="number" min="0" max="2" placeholder="wynik gracza 1" [(ngModel)]="data.player1Score" tabindex="1">
+  </md-form-field>
+  <md-form-field>
+    <input mdInput type="number" min="0" max="2" placeholder="wynik gracza 2" [(ngModel)]="data.player2Score" tabindex="2">
+  </md-form-field>
+</div>
+<div md-dialog-actions>
+  <button md-button (click)="onNoClick()" tabindex="-1">No Thanks</button>
+  <button md-button [md-dialog-close]="data" tabindex="3">Ok</button>
+</div>
+
