--- a/ClientApp/app/components/scores/scores.component.html
+++ b/ClientApp/app/components/scores/scores.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <button (click)="openAddMatchDialog()" class="btn btn-lg btn-success">
+  <button *ngIf = "players && players.length" (click)="openAddMatchDialog()" class="btn btn-lg btn-success">
       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
       Dodaj mecz
     </button>
