match delete confirmation

--- a/ClientApp/app/components/scores/scores.component.html
+++ b/ClientApp/app/components/scores/scores.component.html
@@ -32,7 +32,7 @@
     <td>{{match.player2.name}}</td>
     <td>
       <button (click)="edit(match.id)" class="btn btn-default"><i class="fa fa-lg fa-pencil-square-o"></i></button>
-      <button (click)="delete(match.id)" class="btn btn-default"><i class="fa fa-lg fa-times"></i></button>
+      <button (click)="delete(match.id)" class="btn btn-danger"><i class="fa fa-lg fa-trash"></i></button>
     </td>
   </tr>
 </tbody>
