--- a/ClientApp/app/components/scores/scores.component.html
+++ b/ClientApp/app/components/scores/scores.component.html
@@ -31,7 +31,7 @@
     <td>{{match.player1.score}} : {{match.player2.score}}</td>
     <td>{{match.player2.name}}</td>
     <td>
-      <button (click)="edit(match.id)" class="btn btn-default"><i class="fa fa-lg fa-pencil-square-o"></i></button>
+      <button (click)="edit(match)" class="btn btn-default"><i class="fa fa-lg fa-pencil-square-o"></i></button>
       <button (click)="delete(match.id)" class="btn btn-danger"><i class="fa fa-lg fa-trash"></i></button>
     </td>
   </tr>
