--- a/ClientApp/app/components/scores/edit-match-dialog.component.html
+++ b/ClientApp/app/components/scores/edit-match-dialog.component.html
@@ -1,50 +1,63 @@
 <h2 mat-dialog-title>Dodaj mecz</h2>
-
-<div mat-dialog-content>
-  <div class="col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Gracz 1
-      </div>
-      <div class="panel-body">
-        <div *ngIf="data.availablePlayers && data.availablePlayers.length">
-          <mat-form-field>
-            <mat-select [(ngModel)]="data.selectedPlayer1">
-              <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
+<form novalidate [formGroup]="matchForm" (ngSubmit)="save()">
+  <div mat-dialog-content>
+    <div class="col-md-6">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          Gracz 1
         </div>
-        <div>
-          <mat-form-field>
-            <input matInput type="number" min="0" max="2" placeholder="Wynik" [(ngModel)]="data.player1Score" tabindex="1">
-          </mat-form-field>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Gracz 2
-      </div>
-      <div class="panel-body">
-        <div *ngIf="data.availablePlayers && data.availablePlayers.length">
-          <mat-form-field>
-            <mat-select [(ngModel)]="data.selectedPlayer2">
-              <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput type="number" min="0" max="2" placeholder="Wynik" [(ngModel)]="data.player2Score" tabindex="2">
-          </mat-form-field>
+        <div class="panel-body">
+          <div *ngIf="data.availablePlayers && data.availablePlayers.length">
+            <mat-form-field>
+              <mat-select id="selectedPlayer1Id" formControlName="selectedPlayer1">
+                <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field>
+              <input id="player1ScoreId" matInput type="number" min="0" max="2" placeholder="Wynik" formControlName="player1Score" tabindex="1">
+            </mat-form-field>
+          </div>
         </div>
       </div>
     </div>
+    <div class="col-md-6">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          Gracz 2
+        </div>
+        <div class="panel-body">
+          <div *ngIf="data.availablePlayers && data.availablePlayers.length">
+            <mat-form-field>
+              <mat-select id="selectedPlayer2Id" formControlName="selectedPlayer2">
+                <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field>
+              <input id="player2ScoreId" matInput type="number" min="0" max="2" placeholder="Wynik" formControlName="player2Score" tabindex="2">
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="help-block">
+      <div *ngIf="matchForm.errors?.differentPlayers 
+         && (matchForm.get('selectedPlayer1').dirty || matchForm.get('selectedPlayer2').dirty || formSubmitAttempt)">
+        Wybierz dwóch różnych graczy.
+      </div>
+      <div *ngIf="(matchForm.errors?.score 
+                    || matchForm.get('player1Score').invalid 
+                    || matchForm.get('player2Score').invalid) 
+                    && formSubmitAttempt">
+        Niepoprawny wynik.
+      </div>
+    </div>
   </div>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()" tabindex="-1">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" tabindex="3">Ok</button>
-</div>
+  <div mat-dialog-actions>
+    <button type="button" mat-raised-button (click)="onNoClick()" tabindex="-1">Anuluj</button>
+    <button mat-raised-button color="primary" type="submit" tabindex="3">Zapisz</button>
+  </div>
+</form>
