--- a/ClientApp/app/components/app/app.component.html
+++ b/ClientApp/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-    <div class='row'>
+    <div class='row no-gutter'>
         <div class='col-sm-3'>
             <nav-menu></nav-menu>
         </div>
