--- a/ClientApp/app/components/scores/scores.component.css
+++ b/ClientApp/app/components/scores/scores.component.css
@@ -1,23 +1,15 @@
-.navbar-brand {
-  padding: 10px;
+#matches-toolbar{
+  position: relative;
 }
 
-  .navbar-brand > img {
-    height: 100%;
-    width: auto;
-  }
-
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+#add-match-button{
+  position: absolute;
+  top:35px;
+  right: 60px;
 }
 
-  .jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-    margin-top: 30px;
+@media (max-width: 599px) {
+  #add-match-button{
+    top:25px;
   }
-
-.table td, .table th {
-  text-align: center;
 }
