Material nav menu

--- a/ClientApp/app/components/app/app.component.html
+++ b/ClientApp/app/components/app/app.component.html
@@ -1,10 +1,29 @@
-<div class='container-fluid'>
-    <div class='row no-gutter'>
-        <div class='col-sm-3'>
-            <nav-menu></nav-menu>
+<mat-sidenav-container class="app-sidenav-container">
+
+        <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" [opened]="true" [mode]="'side'">
+            <mat-toolbar color="primary">
+                MTG Scores
+            </mat-toolbar>
+    
+            <mat-nav-list>
+                <mat-list-item [routerLinkActive]="['link-active']" [routerLink]="['/ranking']">
+                    <a matline >
+                        <span class='glyphicon glyphicon-th-list'></span> Tabela
+                    </a>
+                </mat-list-item>
+                <mat-list-item [routerLinkActive]="['link-active']" [routerLink]="['/scores']">
+                    <a matline >
+                        <span class='glyphicon glyphicon-th-list'></span> Wyniki
+                    </a>
+                </mat-list-item>
+            </mat-nav-list>
+    
+        </mat-sidenav>
+    
+        <div class="app-sidenav-content">
+            <div class="wrapper">
+                <router-outlet></router-outlet>
+            </div>
         </div>
-        <div class='col-sm-9 body-content'>
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-</div>
+    
+    </mat-sidenav-container>
