--- a/ClientApp/app/components/scores/edit-match-dialog.component.html
+++ b/ClientApp/app/components/scores/edit-match-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Dodaj mecz</h2>
+<h2 mat-dialog-title>{{data.title}}</h2>
 <form novalidate [formGroup]="matchForm" (ngSubmit)="save()">
   <div mat-dialog-content>
     <div class="col-md-6">
