--- a/MTG.Scores2.Web/src/app/ranking/ranking.component.html
+++ b/MTG.Scores2.Web/src/app/ranking/ranking.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 table-wrapper">
   <mat-table #table [dataSource]="ranking">
 
     <ng-container matColumnDef="position">
