--- a/MTG.Scores2.Web/src/app/scores/scores.component.html
+++ b/MTG.Scores2.Web/src/app/scores/scores.component.html
@@ -2,7 +2,11 @@
   <mat-icon>add</mat-icon>
 </button>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z table-wrapper">
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtr">
+      </mat-form-field>
+
   <mat-table #table [dataSource]="matchesDataSource">
 
     <ng-container matColumnDef="player1.name">
