Improve readability on edit-match-dialog

--- a/MTG.Scores2.Web/src/app/shared/edit-match-dialog/edit-match-dialog.component.html
+++ b/MTG.Scores2.Web/src/app/shared/edit-match-dialog/edit-match-dialog.component.html
@@ -1,59 +1,67 @@
 <h2 mat-dialog-title>{{data.title}}</h2>
 <form novalidate [formGroup]="matchForm" (ngSubmit)="save()">
   <div mat-dialog-content>
-    <div class="col-md-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Gracz 1
-        </div>
-        <div class="panel-body">
-          <div *ngIf="data.availablePlayers && data.availablePlayers.length">
-            <mat-form-field>
-              <mat-select id="selectedPlayer1Id" formControlName="selectedPlayer1">
-                <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-default player-panel">
+          <div class="panel-heading">
+            Gracz 1
           </div>
-          <div>
-            <mat-form-field>
-              <input id="player1ScoreId" matInput type="number" min="0" max="2" placeholder="Wynik" formControlName="player1Score" tabindex="1">
-            </mat-form-field>
+          <div class="panel-body">
+            <div *ngIf="data.availablePlayers && data.availablePlayers.length">
+              <mat-form-field>
+                <mat-select id="selectedPlayer1Id" formControlName="selectedPlayer1">
+                  <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input id="player1ScoreId" matInput type="number" min="0" max="2" placeholder="Wynik" formControlName="player1Score"
+                  tabindex="1">
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Gracz 2
+          </div>
+          <div class="panel-body">
+            <div *ngIf="data.availablePlayers && data.availablePlayers.length">
+              <mat-form-field>
+                <mat-select id="selectedPlayer2Id" formControlName="selectedPlayer2">
+                  <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input id="player2ScoreId" matInput type="number" min="0" max="2" placeholder="Wynik" formControlName="player2Score"
+                  tabindex="2">
+              </mat-form-field>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Gracz 2
-        </div>
-        <div class="panel-body">
-          <div *ngIf="data.availablePlayers && data.availablePlayers.length">
-            <mat-form-field>
-              <mat-select id="selectedPlayer2Id" formControlName="selectedPlayer2">
-                <mat-option *ngFor="let player of data.availablePlayers" [value]="player">{{player.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="help-block">
+              <div *ngIf="matchForm.errors?.differentPlayers 
+                 && (matchForm.get('selectedPlayer1').dirty || matchForm.get('selectedPlayer2').dirty || formSubmitAttempt)">
+                Wybierz dwóch różnych graczy.
+              </div>
+              <div *ngIf="(matchForm.errors?.score 
+                            || matchForm.get('player1Score').invalid 
+                            || matchForm.get('player2Score').invalid) 
+                            && formSubmitAttempt">
+                Niepoprawny wynik.
+              </div>
+            </div>
           </div>
-          <div>
-            <mat-form-field>
-              <input id="player2ScoreId" matInput type="number" min="0" max="2" placeholder="Wynik" formControlName="player2Score" tabindex="2">
-            </mat-form-field>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="help-block">
-      <div *ngIf="matchForm.errors?.differentPlayers 
-         && (matchForm.get('selectedPlayer1').dirty || matchForm.get('selectedPlayer2').dirty || formSubmitAttempt)">
-        Wybierz dwóch różnych graczy.
-      </div>
-      <div *ngIf="(matchForm.errors?.score 
-                    || matchForm.get('player1Score').invalid 
-                    || matchForm.get('player2Score').invalid) 
-                    && formSubmitAttempt">
-        Niepoprawny wynik.
-      </div>
     </div>
   </div>
   <div mat-dialog-actions>
