--- a/MTG.Scores2.Web/src/app/shared/edit-match-dialog/edit-match-dialog.component.scss
+++ b/MTG.Scores2.Web/src/app/shared/edit-match-dialog/edit-match-dialog.component.scss
@@ -1,7 +1,19 @@
-.player-block{
+.player-block {
   border: 1px solid #c3bdbd;
   border-radius: 8px;
   margin: 10px;
   padding: 20px;
   box-shadow: 6px 6px 20px #c3bdbd;
+}
+
+.panel-heading {
+  font-weight: bold;
+}
+
+.player-panel {
+  padding: 5px 0;
+}
+
+.help-block {
+  font-style: italic;
 }
