--- a/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.scss
+++ b/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.scss
@@ -1,3 +1,16 @@
+#add-tournament-button{
+  position: absolute;
+  top:35px;
+  right: 60px;
+}
+
+@media (max-width: 599px) {
+  #add-tournament-button{
+    top:25px;
+  }
+}
+
+
 .table-wrapper{
   padding: 10px;
 }
