--- a/src/web/MTG.Scores2.Web/src/app/app.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/app.component.html
@@ -6,7 +6,7 @@
     </mat-toolbar>
 
     <mat-nav-list>
-      <mat-list-item [routerLinkActive]="['link-active']" [routerLink]="['/ranking']">
+      <!-- <mat-list-item [routerLinkActive]="['link-active']" [routerLink]="['/ranking']">
         <a matline>
           <span class='glyphicon glyphicon-th-list'></span> Tabela
         </a>
@@ -14,6 +14,11 @@
       <mat-list-item [routerLinkActive]="['link-active']" [routerLink]="['/scores']">
         <a matline>
           <span class='glyphicon glyphicon-th-list'></span> Wyniki
+        </a>
+      </mat-list-item> -->
+      <mat-list-item [routerLinkActive]="['link-active']" [routerLink]="['/tournaments']">
+        <a matline>
+          <span class='glyphicon glyphicon-th-list'></span> Turnieje
         </a>
       </mat-list-item>
     </mat-nav-list>
