--- a/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
@@ -22,9 +22,9 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let tournament">
-        <!-- <button mat-icon-button (click)="edit(tournament)">
+        <button mat-icon-button [routerLink]="['/tournament-details', tournament.id]">
           <mat-icon aria-label="Edit">edit</mat-icon>
-        </button> -->
+        </button>
         <button mat-icon-button color="warn" (click)="delete(tournament.id)">
           <mat-icon aria-label="Delete">delete</mat-icon>
         </button>
