tournament participants WIP

--- a/src/web/MTG.Scores2.Web/src/app/tournament-details/tournament-details.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/tournament-details/tournament-details.component.html
@@ -1,13 +1,19 @@
+<div class="tournament-wrapper">
   <div *ngIf="tournament">
-      <mat-tab-group>
-        <mat-tab label="Ranking">
-          <app-ranking tournamentId={{tournament.id}}>   
-          </app-ranking>
-        </mat-tab>
-        <mat-tab label="Mecze">
-          <app-scores tournamentId={{tournament.id}}>
-          </app-scores>
-        </mat-tab>
-        <mat-tab label="Uczestnicy"> Content 3 </mat-tab>
-      </mat-tab-group>
+    <mat-tab-group>
+      <mat-tab label="Ranking">
+        <app-ranking tournamentId={{tournament.id}}>
+        </app-ranking>
+      </mat-tab>
+      <mat-tab label="Mecze">
+        <app-scores tournamentId={{tournament.id}}>
+        </app-scores>
+      </mat-tab>
+      <mat-tab label="Uczestnicy"> 
+        <app-participants tournamentId={{tournament.id}}>
+
+        </app-participants>
+      </mat-tab>
+    </mat-tab-group>
   </div>
+</div>
