--- a/src/web/MTG.Scores2.Web/src/app/app.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" [opened]="!isScreenSmall()" [mode]="isScreenSmall() ? 'over' : 'side'">
     <mat-toolbar color="primary">
-      <span>MTG Scores</span>
+      <img class="logo-img" src="../assets/mtg_logo.png" alt="logo">
     </mat-toolbar>
 
     <mat-nav-list>
