--- a/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
@@ -1,4 +1,4 @@
-<button id="add-tournament-button" mat-fab color="accent" [routerLinkActive]="['link-active']" [routerLink]="['/new-tournament']">
+<button id="add-tournament-button" mat-fab color="accent" [routerLink]="['/new-tournament']">
   <mat-icon>add</mat-icon>
 </button>
 
