--- a/src/web/MTG.Scores2.Web/src/app/shared/toolbar/toolbar.component.scss
+++ b/src/web/MTG.Scores2.Web/src/app/shared/toolbar/toolbar.component.scss
@@ -3,20 +3,33 @@ $iconWidth: 56px;
 .sidenav-toggle {
   display: none;
   padding: 0;
-  margin: 8px;
+  margin: 0 8px;
   min-width: $iconWidth;
 
   @media (max-width: 720px) {
-    display: flex;
+    display: inline-block;
     align-items: center;
     justify-content: center;
   }
 
-  mat-icon {
-    font-size: 30px;
-    height: $iconWidth;
-    width: $iconWidth;
-    line-height: $iconWidth;
-    color: white;
-  }
+
+}
+.toolbar-item {
+  height: $iconWidth;
+  width: $iconWidth;
+  line-height: $iconWidth;
+  color: white;
+}
+
+
+.floatfix:after {
+  content:'';
+  display:block;
+  clear:both;
+}
+.toolbar-left {
+  float: left;
+}
+.toolbar-right {
+  float: right;
 }
